[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniq"
version = "1.0.0"
description = "OmniQ v1 - Redis+Lua queue Python SDK"
requires-python = ">=3.9"
dependencies = ["redis>=5.0.0", "ulid-py>=1.1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
